--- a/src/components/ui/StarIcon/StarIcon.module.css
+++ b/src/components/ui/StarIcon/StarIcon.module.css
@@ -1,28 +1,4 @@
-.card {
-    border: 1px solid red;
-    border-radius: 8px;
-    display: inline-flex;
-    flex-direction: column;
-    padding: 16px;
-    gap: 16px;
-    justify-content: center;
-    align-items: center;
-}
-
-.card_image {
-    width: 50px;
-    height: 50px;
-    border-radius: 100%;
-    overflow: hidden;
-    user-select: none;
-}
-
-.card_image img {
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-size: cover;
-}
+@import '../../../styles/variables.css';
 
 .star {
     position: relative;
@@ -36,11 +12,11 @@
     margin-bottom: 1.2em;
     
     border-right:  .3em solid transparent;
-    border-bottom: .7em  solid #FC0;
+    border-bottom: .7em  solid var(--color-disabled);
     border-left:   .3em solid transparent;
   
     /* Controlls the size of the stars. */
-    font-size: 24px;
+    font-size: 16px;
   }
 
  .star:before, .star:after {
@@ -55,7 +31,7 @@
     left: -1em;
   
     border-right:  1em solid transparent;
-    border-bottom: .7em  solid #FC0;
+    border-bottom: .7em  solid var(--color-disabled);
     border-left:   1em solid transparent;
   
     transform: rotate(-35deg);
@@ -63,4 +39,11 @@
   
   .star:after {  
     transform: rotate(35deg);
+  }
+
+  .star.selected {
+    border-bottom: .7em  solid var(--color-favorite);
+  }
+  .star.selected:before, .star.selected:after {
+    border-bottom: .7em  solid var(--color-favorite);
   }
